# AnimalEstate

./: close_svr.bat  start_base.bat  start_node.bat  动物庄园运动会.docx  动物庄园运动会1.1.docx  服务器启动流程.txt  资源需求.docx
AnimalEstate/: package.json
AnimalEstate/assets/prefab/: bear.prefab  chicken.prefab  duck.prefab  lion.prefab  monkey.prefab  mouse.prefab  rabbit.prefab  tiger.prefab
AnimalEstate/assets/res/game/lakeside/: water_effect.effect
AnimalEstate/assets/scene/: game.scene  lakeside_game.scene  main.scene  web_login.scene
AnimalEstate/assets/script/game/: game.ts
AnimalEstate/assets/script/login/: login.ts
AnimalEstate/assets/script/main_scene/: main_scene.ts  match_interface.ts
AnimalEstate/assets/script/netDriver/: netDriver.ts  netFriend  netFriend.ts  netGame.ts  netLogin.ts  netMatch.ts  netRoom.ts  netSingleton.ts
AnimalEstate/assets/script/proto/: ccallgame.ts  ccallplayer.ts  common.ts
AnimalEstate/assets/script/serverSDK/: ccallgame.ts  ccalllogin.ts  client_handle.ts  common.ts  error.ts  gamecallc.ts
config/: config_base.txt  config_node.txt
gate/: Release.rar
gate_server/: CMakeLists.txt
gate_server/component/gate/: CMakeLists.txt
gate_server/server/battle/: CMakeLists.txt  call_mng.h  role_mng.h  server.cpp  singleton.h
gate_server/server/battle/battle/: battle.cpp  battle.h  battle_mng.cpp  battle_mng.h  buff.cpp  buff.h  constant.cpp  constant.h  map.cpp  map.h  map_data.cpp  map_data.h  random.cpp  random.h  robot.cpp  robot.h  role.cpp  role.h  role_bag.cpp  role_bag.h  role_battle.cpp  role_battle.h  role_body.cpp  role_body.h  role_scene.cpp  role_scene.h  role_skill.cpp  role_skill.h  skill.cpp  skill.h  team.h
gate_server/server/battle/json_config/: json_config_mng.cpp  json_config_mng.h
gate_server/server/battle/msg_handle/: client_battle_msg.h  lobby_msg.h  match_msg.h
gate_server/server/battle/proto/: battlecallc.cpp  battlecallc.h  bcalllobby.cpp  bcalllobby.h  bcallmatch.cpp  bcallmatch.h  ccallbattle.cpp  ccallbattle.h  ccalllobby.cpp  ccalllobby.h  ccallmatch.cpp  ccallmatch.h  ccallrouter.cpp  ccallrouter.h  common.cpp  common.h  error.cpp  error.h  lcallbattle.cpp  lcallbattle.h  lcalllobby.cpp  lcalllobby.h  lcallmatch.cpp  lcallmatch.h  lcallrouter.cpp  lcallrouter.h  lobbycallc.cpp  lobbycallc.h  matchcallc.cpp  matchcallc.h  mcallbattle.cpp  mcallbattle.h  rcalllobby.cpp  rcalllobby.h  routercallc.cpp  routercallc.h
gate_server/server/gate_svr/: CMakeLists.txt  gate.cpp
gate_server/service/: redismqservice.h
proto/: gen_proto.bat
proto/gen_svr/: ccallgame_cli.cs  ccallgame_svr.cs  ccalllogin_cli.cs  ccalllogin_svr.cs  ccallplayer_cli.cs  ccallplayer_svr.cs  ccallroom_cli.cs  common_cli.cs  common_svr.cs  error_cli.cs  error_svr.cs  gamecallc_cli.cs  gamecallc_svr.cs  gamecallplayer_svr.cs  logincallplayer_svr.cs  matchcallgame_svr.cs  matchcallroom_svr.cs  playercallc_cli.cs  playercallc_svr.cs  playercallmatch_svr.cs  playercallplayer_svr.cs  playercallroom_svr.cs  roomcallc_cli.cs  roomcallc_svr.cs  roomcallmatch_svr.cs
proto/gen_ts/: ccallgame.ts  ccallplayer.ts  common.ts  error.ts  gamecallc.ts  playercallc.ts  roomcallc.ts
proto/proto/client_call_hub/: ccallgame.juggle  ccalllogin.juggle  ccallplayer.juggle  ccallroom.juggle
proto/proto/common/: common.juggle
proto/proto/hub_call_client/: error.juggle  gamecallc.juggle  playercallc.juggle  roomcallc.juggle
proto/proto/hub_call_hub/: logincallplayer.juggle  matchcallgame.juggle  matchcallroom.juggle  playercallmatch.juggle  playercallplayer.juggle  playercallroom.juggle  roomcallmatch.juggle
server/: server.sln
server/common/: common.csproj
server/common/constant/: constant.cs
server/common/redis_handle/: redis_help.cs
server/game_proto/: ccallgame_svr.cs  ccallplayer_svr.cs  common_svr.cs  error_svr.cs  gamecallc_svr.cs  gamecallplayer_svr.cs  logincallplayer_svr.cs  matchcallgame_svr.cs  playercallc_svr.cs  playercallplayer_svr.cs  playercallroom_svr.cs  roomcallc_svr.cs  roomcallmatch_svr.cs
server/proto/: abelkhan.cs  protocol.csproj
server/server/dbproxy_svr/: Program.cs
server/server/game/: Program.cs  animal_skill_define.cs  client_msg_handle.cs  game_mng.cs  grid_effect_define.cs  match_msg_handle.cs  player_proxy_mng.cs  props_effect_define.cs
server/server/login/: Program.cs  client_msg_handle.cs  login.csproj  player_proxy_mng.cs
server/server/match/: Program.cs  game_proxy_mng.cs  match_mng.cs  player_msg_handle.cs  player_proxy_mng.cs  room_proxy_mng.cs
server/server/player/: Program.cs  client_mng.cs  client_msg_handle.cs  game_msg_handle.cs  login_msg_handle.cs  match_msg_handle.cs  match_proxy_mng.cs  player.csproj  player_msg_handle.cs  player_proxy_mng.cs  room_proxy_mng.cs
server/server/room/: Program.cs  client_msg_handle.cs  match_msg_handle.cs  player_msg_handle.cs  room_mng.cs
tiledmap/lakeside/: background.tmx  lakeside.tiled-session
